# GPlayer

./: .gitignore  README.md  conftest.py  pyproject.toml  requeriments.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: adapter.py  buffer.py  buffer_error.py  buffer_left.py  buffer_right.py  channel.py  checkout.py  control.py  custom_exceptions.py  frame_mapper.py  interfaces.py  manager.py  memento.py  my_structure.py  player_control.py  playlist.py  reader.py  readers.py  section.py  section_service.py  template.py  teste.py  trash.py  utils.py  video.py  video_buffer.py  video_command.py  video_controller.py
src/gplayer/: adapter.py  buffer.py  buffer_left.py  buffer_right.py  custom_exceptions.py  frame_mapper.py  input_handler.py  manager.py  memento.py  player_control.py  playlist.py  reader.py  readers.py  section.py  section_service.py  shortcuts.py  template.py  trash.py  utils.py  video.py  video_command.py  video_controller.py
tests/: __init__.py  my_mocks.py  test_buffer.py  test_buffer_error.py  test_buffer_left.py  test_buffer_right.py  test_control.py  test_controller.py  test_frame_mapper.py  test_my_structure.py  test_orchestrator.py  test_player_control.py  test_playlist.py  test_process.py  test_reader.py  test_section.py  test_trash.py  test_utils.py  test_video.py  test_video_buffer_left.py  test_video_buffer_right.py  uteis.py
